# url2obsidian

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-12-url2obsidian.md
docs/superpowers/specs/: 2026-05-12-url2obsidian-design.md
packaging/: com.mhattingpete.url2obsidian.plist.template
src/url2obsidian/: cli.py  config.py  extractor.py  fetcher.py  inbox.py  models.py  protocols.py  raindrop_client.py  renderer.py  vault.py  worker.py
tests/: fakes.py  test_config.py  test_extractor.py  test_fetcher.py  test_inbox.py  test_models.py  test_protocols.py  test_raindrop_client.py  test_renderer.py  test_vault.py  test_worker.py
tests/fixtures/: article-simple.html  expected_clipping.md  raindrop-list.json
tools/defuddle-cli/: README.md  package-lock.json  package.json
